--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -1,9 +1,5 @@
-.page {
-  background-color: #ffffff;
-}
-
 .page__body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Open Sans", "Arial", sans-serif;
   background-position: top center;
   min-height: 100%;
   margin: 0 auto;
