--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,6 +2,7 @@
 @import "common/variables.scss";
 @import "common/visually-hidden.scss";
 @import "common/mixins.scss";
+@import "common/fonts.scss";
 
 // blocks
 @import "blocks/page.scss";
