--- a/source/sass/blocks/carousel.scss
+++ b/source/sass/blocks/carousel.scss
@@ -38,18 +38,18 @@ ___ */
   }
 
   .carousel__dots {
-    margin-bottom: 60px;
     list-style: none;
     padding: 0;
     display: grid;
     gap: 18px;
     grid-auto-flow: column;
     justify-content: center;
+    margin-top: -10px;
   }
 
   @media (min-width: $tablet-width) {
     .carousel__dots {
-      margin-bottom: 58px;
+      margin-bottom: 14px;
     }
   }
 
@@ -97,6 +97,7 @@ ___ */
       flex-direction: row;
       justify-content: center;
       padding-top: 72px;
+      padding-bottom: 47px;
       width: 940px;
       margin: 0 auto;
     }
@@ -127,6 +128,8 @@ ___ */
       display: flex;
       flex-direction: row;
       justify-content: space-between;
+      position: relative;
+      top: -95px;
     }
   }
 
@@ -154,7 +157,9 @@ ___ */
   font-size: 18px;
   line-height: 30px;
   text-align: center;
-  margin-bottom: 0;
+  margin-top: 52px;
+  position: relative;
+  top: -11px;
 }
 
 @media (min-width: $tablet-width) {
@@ -162,6 +167,8 @@ ___ */
     font-weight: 700;
     font-size: 20px;
     line-height: 30px;
+    margin-top: 15px;
+    margin-bottom: -11px;
   }
 }
 
@@ -175,20 +182,20 @@ ___ */
 
 @media (min-width: $desktop-width) {
   .carousel__title-wraper {
-    margin-top: 36px;
+    margin-top: -43px;
     margin-bottom: 41px;
   }
 }
 
 @media (min-width: $tablet-width) {
   .carousel__title-wraper {
-    margin-bottom: 58px;
+    margin-bottom: 33px;
   }
 }
 
 .carousel__title-name {
   font-weight: 400;
-  font-size: 18px;
+  font-size: 14px;
   line-height: 30px;
   text-align: center;
   margin: 0;
@@ -214,6 +221,8 @@ ___ */
   font-size: 14px;
   line-height: 30px;
   text-align: center;
+  position: relative;
+  top: -14px;
 }
 
 @media (min-width: $tablet-width) {
