--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,6 +1,14 @@
 .contacts {
   text-align: center;
+  margin-top: -47px;
 }
+
+@media (min-width: $tablet-width) {
+  .contacts {
+    margin-top: -35px;
+  }
+}
+
 
 .contacts__text {
   margin-bottom: 33px;
@@ -15,7 +23,8 @@
     font-size: 40px;
     line-height: 50px;
     font-weight: 300;
-    margin-bottom: 40px;
+    margin-bottom: 39px;
+    margin-top: 84px;
   }
 }
 
@@ -23,8 +32,9 @@
   .contacts__text {
     font-weight: 300;
     font-size: 50px;
-    line-height: 60px;
-    margin-bottom: 55px;
+    line-height: 68px;
+    margin-bottom: 39px;
+    margin-top: 91px;
   }
 }
 
@@ -55,6 +65,7 @@
 @media (min-width: $tablet-width) {
   .contacts__item {
     width: 250px;
+    margin-bottom: 26px;
   }
 }
 
@@ -64,15 +75,42 @@
   }
 }
 
-@media (min-width: $desktop-width) {
+@media (min-width: $tablet-width) {
   .contacts__item:first-child {
-    order: 1;
+    position: relative;
+    right: 17px;
   }
 }
 
 @media (min-width: $desktop-width) {
+  .contacts__item:first-child {
+    order: 1;
+    position: relative;
+    top: 2px;
+    left: -7px;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .contacts__item:nth-child(2) {
+    position: relative;
+    left: 18px;
+  }
+}
+
+
+@media (min-width: $desktop-width) {
   .contacts__item:nth-child(2) {
     order: 3;
+    position: relative;
+    left: 5px;
+    top: 2px;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .contacts__item:last-child {
+    margin-left: 2px;
   }
 }
 
@@ -80,6 +118,9 @@
   .contacts__item:last-child {
     order: 2;
     margin-top: 0;
+    position: relative;
+    top: 2px;
+    left: -2px;
   }
 }
 
@@ -110,7 +151,7 @@
   flex-direction: row;
   justify-content: center;
   text-align: center;
-  margin-bottom: 24px;
+  margin-bottom: 20px;
 
   &:hover {
     color: $blue;
@@ -138,11 +179,16 @@
   width: 100%;
   height: 200px;
   margin: 0 auto;
-  background-image: url("..//img/map.jpg");
+  background-image: url("..//img/mapmobile.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: auto;
-  clip-path: polygon(52% 26%, 100% 0, 100% 100%, 0 100%, 0 0);
+  clip-path: polygon(50% 20%, 100% 0, 100% 100%, 0 100%, 0 0);
+
+
+  @media (min-resolution: $retina) {
+    background-image: url("img/mapmobile@2x.jpg");
+  }
 }
 
 @media (min-width: $tablet-width) {
@@ -154,17 +200,27 @@
     background-size: auto;
     width: 100%;
     margin: 0 auto;
-    clip-path: polygon(52% 26%, 100% 0, 100% 100%, 0 100%, 0 0);
+    clip-path: polygon(50% 20%, 100% 0, 100% 100%, 0 100%, 0 0);
+
+
+    @media (min-resolution: $retina) {
+      background-image: url("img/maptablet@2x.jpg");
+    }
   }
 }
 
 @media (min-width: $desktop-width) {
   .contacts__map {
-    height: 500px;
+    height: 502px;
     width: 100%;
     background-image: url("..//img/mapdesctop.jpg");
     background-position: center;
     background-repeat: no-repeat;
     margin: 0 auto;
+    clip-path: polygon(50% 20%, 100% 0, 100% 100%, 0 100%, 0 0);
+
+    @media (min-resolution: $retina) {
+      background-image: url("img/mapdesktop@2x.jpg");
+    }
   }
 }
