--- a/source/sass/blocks/effect.scss
+++ b/source/sass/blocks/effect.scss
@@ -7,15 +7,15 @@
 @media (min-width: $tablet-width) {
   .effect {
     display: block;
-    margin-top: 58px;
     background-color: $white;
+    padding-top: 55px;
   }
 }
 
 @media (min-width: $desktop-width) {
   .effect {
     margin-top: 0;
-    padding-top: 24px;
+    padding-top: 0;
     background-color: $gray;
   }
 }
@@ -43,12 +43,13 @@
 
 @media (min-width: $desktop-width) {
   .effect__wrap {
-    padding-left: 367px;
-    padding-top: 92px;
-    padding-bottom: 115px;
+    padding-left: 370px;
+    padding-top: 95px;
+    padding-bottom: 82px;
     background-size: 300px auto;
     width: 940px;
-    margin: 0 auto;
+    position: relative;
+    top: -30px;
   }
 }
 
@@ -59,6 +60,7 @@
     font-size: 30px;
     line-height: 36px;
     font-weight: 700;
+    padding-top: 5px;
   }
 }
 
