--- a/source/sass/blocks/galery.scss
+++ b/source/sass/blocks/galery.scss
@@ -1,14 +1,19 @@
+.galery__wrap {
+  margin-bottom: 2px;
+}
+
+
 .galery__title {
   background-image: url("..//img/background.jpg");
   font-weight: 300;
   font-size: 24px;
   line-height: 33px;
-  color: $white;
+  color: #ffffff;
   display: flex;
   flex-direction: row;
   justify-content: center;
-  padding-top: 102px;
-  padding-bottom: 84px;
+  padding-top: 95px;
+  padding-bottom: 77px;
   width: 100%;
   background-position: center;
   background-size: cover;
@@ -22,10 +27,12 @@
 
 @media (min-width: $tablet-width) {
   .galery__title {
+    padding-top: 175px;
     width: 100%;
     font-weight: 300;
     font-size: 50px;
     line-height: 68px;
+    padding-bottom: 129px;
   }
 }
 
@@ -36,11 +43,6 @@
     font-size: 50px;
     line-height: 68px;
   }
-}
-
-.galery__wraper {
-  padding-top: 47px;
-  padding-bottom: 30px;
 }
 
 @media (min-width: $tablet-width) {
@@ -82,7 +84,7 @@
 
 .galery__inner {
   align-self: center;
-  margin-bottom: 20px;
+  margin-bottom: 19px;
   display: flex;
   flex-direction: column;
   width: 280px;
@@ -120,17 +122,24 @@
   position: relative;
   box-sizing: border-box;
   flex-grow: 1;
-  padding: 17px 18px 20px;
+  padding: 0 18px 0;
   background-color: $gray;
 }
 
 @media (min-width: $tablet-width) {
   .galery__text {
     width: 300px;
-    padding: 23px 32px 25px 27px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .galery__text-wrap {
+    position: relative;
+    left: 13px;
+    top: 7px;
   }
 }
 
@@ -140,6 +149,8 @@
     line-height: 24px;
     font-weight: 700;
     color: $blue;
+    position: relative;
+    left: -1px;
   }
 }
 
@@ -148,6 +159,8 @@
   font-weight: 300;
   line-height: 24px;
   text-transform: uppercase;
+  position: relative;
+  left: 3px;
 }
 
 .galery__desc {
@@ -155,12 +168,17 @@
   font-size: 14px;
   line-height: 24px;
   color: $blue;
+  position: relative;
+  top: -17px;
 }
 
 .galery__like {
   display: flex;
   align-items: center;
   border: none;
+  position: relative;
+  top: -21px;
+  left: -7px;
 }
 
 @media (min-width: $tablet-width) {
@@ -173,9 +191,12 @@
 @media (min-width: $tablet-width) {
   .galery__like-img {
     order: 2;
+    position: relative;
+    top: -3px;
+    right: 5px;
 
     &:checked {
-      background-color: $accent;
+      fill: $accent;
     }
   }
 }
@@ -191,7 +212,10 @@
 
 @media (min-width: $tablet-width) {
   .galery__like-text {
-    margin: 0;
+    position: relative;
+    left: 19px;
+    top: -3px;
+    margin-left: 0;
   }
 }
 
@@ -200,25 +224,49 @@
   font-size: 14px;
   line-height: 30px;
   text-align: center;
-  width: 280px;
-  margin: 22px auto 43px;
+  width: 254px;
+  margin: 44px auto 50px;
   color: $blue;
 }
 
 @media (min-width: $tablet-width) {
   .galery__subtitle {
-    width: 430px;
+    width: 438px;
     font-size: 18px;
     line-height: 30px;
     color: #283645;
     text-align: center;
-    margin-top: 45px;
-    margin-bottom: 67px;
+    margin-top: 2px;
+    margin-bottom: 0;
   }
 }
 
 @media (min-width: $desktop-width) {
   .galery__subtitle {
     margin-top: 43px;
+    width: 572px;
+  }
+}
+
+.galery__subtitle-desc {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 30px;
+  text-align: center;
+  width: 254px;
+  margin: 0 auto;
+  padding-top: 22px;
+  padding-bottom: 44px;
+  color: $blue;
+}
+
+@media (min-width: $tablet-width) {
+  .galery__subtitle-desc {
+    width: 572px;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 30px;
+    padding-bottom: 70px;
+    padding-top: 43px;
   }
 }
