--- a/source/sass/blocks/panorama.scss
+++ b/source/sass/blocks/panorama.scss
@@ -57,13 +57,21 @@
   text-align: center;
 }
 
+@media (min-width: $tablet-width) {
+  .panorama__day {
+    position: relative;
+    top: -457px;
+    right: -520px;
+  }
+}
+
 .panorama__text {
   position: relative;
   box-sizing: border-box;
   width: 280px;
   align-self: center;
   padding-left: 18px;
-  padding-top: 15px;
+  padding-top: 18px;
   padding-bottom: 20px;
   background-color: $gray;
 }
@@ -92,10 +100,28 @@
   color: $blue;
 }
 
+@media (min-width: $tablet-width) {
+  .panorama__name {
+    position: relative;
+    top: -2px;
+    left: 2px;
+  }
+}
+
 .panorama__text-time {
   font-size: 12px;
-  font-weight: lighter;
+  font-weight: 400;
   text-transform: uppercase;
+  position: relative;
+  left: -2px;
+}
+
+@media (min-width: $tablet-width) {
+  .panorama__text-time {
+    position: relative;
+    top: -2px;
+    left: 1px;
+  }
 }
 
 .panorama__img-link {
@@ -110,6 +136,16 @@
   font-size: 14px;
   line-height: 24px;
   color: #283645;
+  width: 253px;
+  position: relative;
+  left: 3px;
+  top: -2px;
+}
+
+@media (min-width: $tablet-width) {
+  .panorama__desc {
+    width: 520px;
+  }
 }
 
 .panorama__text-name {
@@ -122,13 +158,16 @@
   display: flex;
   align-items: center;
   border: none;
+  position: relative;
+  left: -7px;
+  top: 1px;
 }
 
 @media (min-width: $tablet-width) {
   .panorama__like {
     position: absolute;
-    top: 25px;
-    right: 29px;
+    top: 23px;
+    left: 465px;
   }
 }
 
