--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -25,7 +25,7 @@
     display: flex;
     flex-direction: column;
     width: 620px;
-    margin-bottom: 13px;
+    margin-bottom: 8px;
     order: 1;
   }
 }
@@ -33,8 +33,10 @@
 @media (min-width: $desktop-width) {
   .form__competition-name {
     width: 436px;
-    margin-top: 9px;
+    margin-top: 11px;
     margin-bottom: 0;
+    height: 300px;
+    display: flex;
   }
 }
 
@@ -57,9 +59,10 @@
   font-size: 14px;
   line-height: 30px;
   color: $accent;
-  margin-left: 20px;
+  margin-left: 23px;
   display: block;
   margin-bottom: 5px;
+  text-transform: uppercase;
 }
 
 @media (min-width: $tablet-width) {
@@ -68,7 +71,7 @@
     margin-left: 0;
     align-self: center;
     display: block;
-    margin-bottom: 5px;
+    margin-bottom: -3px;
   }
 }
 
@@ -79,7 +82,7 @@
   flex-grow: 1;
   height: 63px;
   align-self: center;
-  padding-left: 22px;
+  padding-left: 20px;
   font-family: inherit;
   font-size: 18px;
   line-height: 30px;
@@ -121,7 +124,7 @@
   position: relative;
   box-sizing: border-box;
   margin: 0;
-  padding: 35px 0 0;
+  padding: 18px 0 0;
   border-style: none;
 }
 
@@ -148,7 +151,7 @@
   line-height: 18px;
   text-align: center;
   text-transform: uppercase;
-  padding-top: 42px;
+  padding-top: 61px;
   width: 240px;
   display: flex;
   position: relative;
@@ -162,13 +165,21 @@
     white-space: nowrap;
     padding-left: 24px;
     padding-right: 24px;
+    padding-top: 53px;
     background-color: $white;
+    bottom: 21px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .form__checkbox-title {
+    bottom: 26px;
   }
 }
 
 @media (min-width: $tablet-width) {
   .form__checkbox-wraper {
-    margin-top: 23px;
+    margin-top: 6px;
   }
 }
 
@@ -206,9 +217,60 @@
   }
 }
 
+.form__checkbox-item p {
+  display: flex;
+  margin-bottom: 39px;
+  margin-top: 3px;
+  width: 260px;
+}
+
 @media (min-width: $desktop-width) {
-  .form__checkbox-item {
+  .form__checkbox-item p {
+    margin-bottom: 31px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .form__checkbox-item:nth-child(2n+1) {
     width: 258px;
+    order: 1;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .form__checkbox-item:nth-child(2n) {
+    width: 258px;
+    order: 2;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .form__checkbox-item:nth-child(3n) {
+    margin-right: 0;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .form__checkbox-item:nth-child(2n) {
+    width: 258px;
+    order: 2;
+    position: relative;
+    bottom: 9px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .form__checkbox-item:nth-child(2n+1) {
+    width: 258px;
+    order: 1;
+    position: relative;
+    top: -19px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .form__checkbox-item:nth-child(3n) {
+    margin-right: 0;
   }
 }
 
@@ -219,6 +281,8 @@
   background-position: center;
   width: 40px;
   height: 40px;
+  position: relative;
+  top: -5px;
 
   &:checked {
     background-image: url("..//img/checkboxchecksvg.svg");
@@ -227,16 +291,15 @@
 
 .form__checkbox-label {
   font-weight: 400;
-  margin-left: 70px;
-  margin-bottom: 52px;
+  margin-left: 18px;
   font-size: 18px;
   line-height: 30px;
-  color: #283645;
+  color: $blue;
 }
 
 @media (min-width: $desktop-width) {
   .form__checkbox-label {
-    margin-left: 30px;
+    margin-left: 19px;
   }
 }
 
@@ -244,7 +307,7 @@
   box-sizing: border-box;
   width: 280px;
   align-self: center;
-  margin: 0 0 35px;
+  margin: 0 0 24px;
   padding: 30px 0 0;
   border-style: none;
 }
@@ -253,8 +316,8 @@
   .form__contacts {
     order: 3;
     width: 620px;
-    margin-top: 70px;
-    margin-bottom: 60px;
+    margin-top: 58px;
+    margin-bottom: 23px;
     border: 2px solid #e5e5e5;
   }
 }
@@ -262,8 +325,8 @@
 @media (min-width: $desktop-width) {
   .form__contacts {
     flex-grow: 1;
-    margin-top: 65px;
-    margin-bottom: 65px;
+    margin-top: 50px;
+    margin-bottom: 28px;
   }
 }
 
@@ -275,7 +338,7 @@
   .form__contacts-legend {
     display: block;
     white-space: nowrap;
-    padding-left: 24px;
+    padding-left: 22px;
     padding-right: 24px;
     background-color: #ffffff;
     position: relative;
@@ -297,7 +360,7 @@
 @media (min-width: $tablet-width) {
   .form__contacts-wrap {
     width: 500px;
-    margin: 10px auto 0;
+    margin: 5px auto 0;
   }
 }
 
@@ -322,9 +385,9 @@
   line-height: 30px;
   color: $accent;
   text-transform: uppercase;
-  margin-left: 20px;
+  margin-left: 24px;
   display: block;
-  margin-bottom: 5px;
+  margin-bottom: 4px;
 }
 
 @media (min-width: $tablet-width) {
@@ -355,7 +418,7 @@
   height: 63px;
   align-self: center;
   margin-bottom: 19px;
-  padding-left: 22px;
+  padding-left: 20px;
 }
 
 @media (min-width: $tablet-width) {
@@ -372,7 +435,7 @@
 }
 
 .form__radio {
-  padding-top: 45px;
+  padding-top: 2px;
   background-color: $gray;
   display: flex;
   flex-direction: row;
@@ -390,12 +453,14 @@
   .form__radio {
     display: flex;
     width: 435px;
+    position: relative;
+    top: -7px;
   }
 }
 
 .form__radio-wrap {
   box-sizing: border-box;
-  margin: 0;
+  margin-bottom: 9px;
   padding: 35px 0 0;
   border-style: none;
 }
@@ -405,7 +470,7 @@
     width: 620px;
     margin: 0 auto;
     border: 2px solid #e5e5e5;
-    padding-bottom: 12px;
+    padding-bottom: 20px;
   }
 }
 
@@ -423,6 +488,7 @@
   text-transform: uppercase;
   text-align: center;
   width: 240px;
+  padding-top: 35px;
 }
 
 @media (min-width: $tablet-width) {
@@ -433,17 +499,17 @@
     padding-left: 24px;
     padding-right: 24px;
     background-color: $white;
+    padding-top: 0;
   }
 }
 
 .form__radio-wraper {
   display: flex;
-  margin-top: 30px;
 }
 
 @media (min-width: $tablet-width) {
   .form__radio-wraper {
-    margin-top: 23px;
+    margin-top: 11px;
   }
 }
 
@@ -461,7 +527,7 @@
     display: flex;
     flex-direction: column;
     flex-basis: 100%;
-    margin-left: 60px;
+    margin-left: 58px;
     width: 280px;
   }
 }
@@ -473,8 +539,28 @@
 }
 
 .form__radio-item {
-  margin-bottom: 45px;
+  margin-bottom: 16px;
+  margin-top: -14px;
+}
+
+.form__radio-item p {
   color: #283645;
+  display: flex;
+  align-items: center;
+}
+
+.form__radio-label {
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 30px;
+  color: $blue;
+  margin-left: 30px;
+}
+
+@media (min-width: $tablet-width) {
+  .form__radio-label {
+    margin-left: 21px;
+  }
 }
 
 .form__radio-ios {
@@ -525,17 +611,17 @@
 .form__review {
   box-sizing: border-box;
   width: 320px;
-  margin: 70px auto 0;
-  padding: 25px 0 47px;
+  margin: 38px auto 0;
+  padding: 17px 0 30px;
   border-style: none;
 }
 
 @media (min-width: $tablet-width) {
   .form__review {
     order: 5;
-    margin-top: 62px;
-    margin-bottom: 68px;
-    padding-bottom: 51px;
+    margin-top: 6px;
+    margin-bottom: 15px;
+    padding-bottom: 29px;
     border: 2px solid #e5e5e5;
     width: 620px;
   }
@@ -543,9 +629,8 @@
 
 @media (min-width: $desktop-width) {
   .form__review {
-    margin-top: 62px;
-    margin-bottom: 66px;
-    padding-bottom: 42px;
+    margin-top: 2px;
+    margin-bottom: 11px;
     width: 940px;
   }
 }
@@ -559,7 +644,6 @@
   margin: 0 auto;
   text-align: center;
   width: 240px;
-  padding-bottom: 22px;
 }
 
 @media (min-width: $tablet-width) {
@@ -571,7 +655,6 @@
     padding-right: 24px;
     background-color: $white;
     position: relative;
-    top: 10px;
   }
 }
 
@@ -611,6 +694,8 @@
     width: 820px;
     margin-top: 17px;
     min-height: 127px;
+    text-align: left;
+    height: 124px;
   }
 }
 
@@ -619,7 +704,7 @@
     order: 6;
     flex-direction: row;
     width: 620px;
-    margin-bottom: 55px;
+    margin-bottom: 59px;
     align-self: center;
     display: flex;
     justify-content: space-between;
@@ -629,7 +714,7 @@
 @media (min-width: $desktop-width) {
   .form__button-wraper {
     width: 940px;
-    margin-bottom: 37px;
+    margin-bottom: 29px;
   }
 }
 
@@ -655,6 +740,7 @@
   .form__button-send {
     margin-top: 50px;
     margin-left: 0;
+    width: 300px;
   }
 }
 
@@ -667,16 +753,29 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  margin-top: 35px;
+  margin-top: 34px;
   text-align: center;
+  margin-bottom: 5px;
 }
 
 @media (min-width: $tablet-width) {
   .form__important-text {
-    margin-top: 70px;
+    margin-top: 68px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .form__important-text {
+    display: inline;
   }
 }
 
 .form__important-star {
   color: $accent;
+}
+
+@media (max-width: $tablet-width) {
+  .form__important-desc {
+    display: none;
+  }
 }
