--- a/source/sass/blocks/galery.scss
+++ b/source/sass/blocks/galery.scss
@@ -42,6 +42,8 @@
     font-weight: 300;
     font-size: 50px;
     line-height: 68px;
+    padding-top: 169px;
+    padding-bottom: 89px;
   }
 }
 
@@ -54,7 +56,7 @@
 
 @media (min-width: $desktop-width) {
   .galery__wraper {
-    padding-bottom: 82px;
+    padding-bottom: 90px;
   }
 }
 
@@ -96,6 +98,13 @@
     width: 300px;
     min-height: 455px;
     margin-bottom: 20px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .galery__inner {
+    margin-bottom: 52px;
+    min-height: 555px;
   }
 }
 
@@ -154,6 +163,16 @@
   }
 }
 
+@media (min-width: $desktop-width) {
+  .galery__text-name {
+    strong {
+      position: relative;
+      left: -5px;
+      top: -1px;
+    }
+  }
+}
+
 .galery__text-time {
   font-size: 12px;
   font-weight: 300;
@@ -163,6 +182,14 @@
   left: 3px;
 }
 
+@media (min-width: $desktop-width) {
+  .galery__text-time {
+    position: relative;
+    left: -1px;
+    top: -1px;
+  }
+}
+
 .galery__desc {
   margin: 0 0 10px;
   font-size: 14px;
@@ -170,6 +197,14 @@
   color: $blue;
   position: relative;
   top: -17px;
+}
+
+@media (min-width: $desktop-width) {
+  .galery__desc {
+    position: relative;
+    top: -18px;
+    left: -5px;
+  }
 }
 
 .galery__like {
@@ -201,6 +236,15 @@
   }
 }
 
+@media (min-width: $desktop-width) {
+  .galery__like-img {
+    order: 2;
+    position: relative;
+    top: 2px;
+    right: 6px;
+  }
+}
+
 .galery__like-text {
   margin-left: 18px;
   font-size: 12px;
@@ -216,6 +260,14 @@
     left: 19px;
     top: -3px;
     margin-left: 0;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .galery__like-text {
+    position: relative;
+    margin-top: 12px;
+    margin-left: -3px;
   }
 }
 
@@ -243,7 +295,6 @@
 
 @media (min-width: $desktop-width) {
   .galery__subtitle {
-    margin-top: 43px;
     width: 572px;
   }
 }
@@ -268,5 +319,12 @@
     line-height: 30px;
     padding-bottom: 70px;
     padding-top: 43px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .galery__subtitle-desc {
+    padding-bottom: 67px;
+    padding-top: 5px;
   }
 }
