--- a/source/sass/blocks/newphoto.scss
+++ b/source/sass/blocks/newphoto.scss
@@ -6,7 +6,7 @@
 @media (min-width: $desktop-width) {
   .newphoto {
     width: 940px;
-    margin: 0 auto 100px;
+    margin: 0 auto 109px;
   }
 }
 
@@ -22,7 +22,7 @@
     justify-content: space-between;
     width: 620px;
     margin: 0 auto;
-    padding-bottom: 39px;
+    padding-bottom: 31px;
   }
 }
 
@@ -46,6 +46,12 @@
     flex-direction: column;
     justify-content: space-between;
     margin-bottom: 49px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .newphoto__editor {
+    margin-bottom: 100px;
   }
 }
 
@@ -266,6 +272,7 @@
 @media (min-width: $desktop-width) {
   .newphoto__range {
     width: 288px;
+    margin-left: 31px;
   }
 }
 
@@ -319,8 +326,6 @@
   .newphoto__add {
     padding-left: 42px;
     padding-right: 42px;
-    padding-top: 22px;
-    padding-bottom: 22px;
     margin-right: 22px;
   }
 }
@@ -343,7 +348,6 @@
   .newphoto__cancellation {
     padding-left: 92px;
     padding-right: 92px;
-    margin-top: 9px;
   }
 }
 
@@ -351,15 +355,24 @@
   .newphoto__cancellation {
     padding-left: 55px;
     padding-right: 55px;
-    padding-top: 22px;
-    padding-bottom: 22px;
     margin-left: 22px;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .newphoto__button-input {
+    display: flex;
+    flex-direction: column;
   }
 }
 
 @media (min-width: $desktop-width) {
   .newphoto__button-input {
     display: flex;
+    position: relative;
+    top: 7px;
+    margin-top: 20px;
+    flex-direction: row;
   }
 }
 
